# tech_task

./: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  init_db_with_samples.py  pyproject.toml  pytest.ini
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  notes.py  patients.py
app/core/: __init__.py  config.py  exceptions.py
app/crud/: __init__.py  base.py  note.py  patient.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/models/: __init__.py  note.py  patient.py
app/schemas/: __init__.py  note.py  patient.py
app/utils/: __init__.py  llm_summary.py
tests/: conftest.py  test_crud.py  test_notes.py  test_patients.py
