[project]
name = "healthcare-data-processing-api"
version = "0.1.0"
description = "Healthcare Data Processing API using FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.13.3",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.1.0",
    "pre-commit>=3.5.0",
    "httpx>=0.27.0"
]
